<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="br.com.mrafaelbatista.udacitymeuportflio.MainActivity">


    <TextView
        android:id="@+id/tv_title_MainActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/title_MainActivity"
        style="@style/title_MainActivity"/>

    <Button
        android:id="@+id/bt_filmesPopulares"
        android:text="@string/bt_filmesPopulares"
        style="@style/bt_MainActivity_apps"
        />

    <Button
        android:id="@+id/bt_stockHawk"
        android:text="@string/bt_stockHawk"
        style="@style/bt_MainActivity_apps"
        />

    <Button
        android:id="@+id/bt_facaMaior"
        android:text="@string/bt_facaMaior"
        style="@style/bt_MainActivity_apps"
        />

    <Button
        android:id="@+id/bt_appMaterial"
        android:text="@string/bt_appMaterial"
        style="@style/bt_MainActivity_apps"
        />

    <Button
        android:id="@+id/bt_sejaOnipresente"
        android:text="@string/bt_sejaOnipresente"
        style="@style/bt_MainActivity_apps"
        />

    <Button
        android:id="@+id/bt_capstone"
        android:text="@string/bt_capstone"
        style="@style/bt_MainActivity_apps"
        />

</LinearLayout>
